<resources>
    <string name="app_name">ShopAdvisor</string>
    <string name="splashscreenName">ShopAdvisor</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="login"><u>LogIn</u></string>
    <string name="forget_password">forget password?</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">last name</string>
    <string name="first_name">First name</string>
    <string name="i_agree_to_the_terms_conditions">I agree to the <u>Terms&amp;Conditions</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_wait">Please wait</string>
    <string name="forget_password_here">Forget Password</string>
    <string name="submit">submit</string>
    <string name="check_mail">Enter your email here on which we\'ll sent a mail to change your password</string>
    <string name="enterEmail">Please enter the Email</string>
    <string name="success">Successfully Registered</string>
    <string name="check">Please check your mail</string>
    <string name="welcome">Welcome to ShopAdvisor</string>
    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">save</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="storage">Oops, Storage permission denied</string>
    <string name="wait">Please Wait…</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="logout">logout</string>
    <string name="add_product">Add_Product</string>
    <string name="product_price">Product Price($)</string>
    <string name="producttitle">ProductTitle</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_description">Product Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="product_details">Product Details</string>
    <string name="check_out">CHECK OUT</string>
    <string name="check_out_poducts">Check Out Poducts</string>
    <string name="selected_address">SELECTED ADDRESS</string>
    <string name="reciept">Reciept</string>
    <string name="subtotal">subtotal</string>
    <string name="shipping_charges">shipping charges</string>
    <string name="total_amount">Total amount</string>
    <string name="paymentmode">PaymentMode</string>
    <string name="cash_on_delivery">cash on delivery</string>
    <string name="place_order">Place Order</string>
    <string name="soldproducts">SoldProducts</string>
    <string name="sold_products_detail">Sold Products Detail</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order id</string>
    <string name="ordered_date">Ordered Date</string>
    <string name="products">Products</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="productpic">productpic</string>
</resources>