<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ui.activities.RegisterActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"


        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />



    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etfirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etlastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />


            <CheckBox
                android:id="@+id/checkboxRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:checked="false"
                android:text="@string/i_agree_to_the_terms_conditions"
              />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="@font/allerta"
                android:minHeight="48dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:padding="4dp"
                    android:text="@string/already_have_an_account"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_loginpage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:padding="4dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>