<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.UserProfileActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/splashbackground"


        >
        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>



    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:scrollbars="none"
        android:fillViewport="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/user"
               />

            <EditText
                android:id="@+id/etfirstNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etlastNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="no"
                android:background="@drawable/edittextbg"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp" />






            <RadioGroup
                android:id="@+id/rggender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"
                    android:layout_marginStart="10dp"/>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"


                    />





            </RadioGroup>





            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="@font/allerta"
                android:minHeight="48dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />











        </LinearLayout>


    </ScrollView>




</LinearLayout>