<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LogInActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/splashbackground"
            />

        <ImageView
            android:id="@+id/imageoflogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/carttrolly"
            android:layout_gravity="center"/>



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_EmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/edittextbg"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_passwordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbg"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:padding="10dp" />
        <TextView
            android:id="@+id/ForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="right"
            android:padding="4dp"
            android:text="@string/forget_password"
            android:textSize="18sp"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbg"
            android:fontFamily="@font/allerta"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tv_registerpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />





        </LinearLayout>







    </LinearLayout>






</LinearLayout>