<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.AddProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_addproduct_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/splashbackground"


        >
        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>



    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E1DCDC"
                >
                <ImageView
                    android:id="@+id/product_pic"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/user"
                    />
                <ImageButton
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/addimage"
                    android:layout_gravity="bottom|right"
                    tools:ignore="RtlHardcoded" />

            </FrameLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                >
                <EditText
                    android:id="@+id/ProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="no"
                    android:background="@drawable/edittextbg"
                    android:hint="@string/producttitle"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/productPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:autofillHints="no"
                    android:background="@drawable/edittextbg"
                    android:hint="@string/product_price"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:autofillHints="no"
                    android:background="@drawable/edittextbg"
                    android:hint="@string/product_description"
                    android:maxLines="4"
                    android:lines="4"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/productQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:autofillHints="no"
                    android:background="@drawable/edittextbg"
                    android:hint="@string/product_quantity"
                    android:minHeight="48dp"
                    android:padding="10dp" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonbg"
                    android:fontFamily="@font/allerta"
                    android:minHeight="48dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textStyle="bold" />




            </LinearLayout>




        </LinearLayout>




    </ScrollView>





</LinearLayout>