<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgetPasswordActivity"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forget_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"


        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="REset Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            />



    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/splashbackground"
            />

        <ImageView
            android:id="@+id/imageoflogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/carttrolly"
            android:layout_gravity="center"/>



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/check_mail"

            android:textSize="18sp"
           />

        <EditText
            android:id="@+id/et_EmailForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/email_id"
            android:minHeight="48dp"
            android:padding="10dp" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbg"
            android:fontFamily="@font/allerta"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:layout_marginTop="60dp"/>









    </LinearLayout>






</LinearLayout>