<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
tools:context=".ui.activities.SettingActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:id="@+id/fl_header_bg"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/iv_header_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/splashbackground" />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/fl_user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/fl_header_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:scaleType="fitXY"
            android:src="@drawable/user" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/user_image_background" />
    </FrameLayout>

    <TextView
        android:id="@+id/editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_header_bg"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="edit"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_user_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#878787"
        android:textSize="22sp"
        tools:text="Sumiran sahu" />

    <TextView
        android:id="@+id/userGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:textColor="#989898"
        android:textSize="18sp"
        tools:text="Male" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userGender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:textColor="#989898"
        android:textSize="18sp"
        tools:text="sahu@gmail.com" />

    <TextView
        android:id="@+id/userPhnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:textColor="#989898"
        android:textSize="18sp"
        tools:text="123456789" />

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhnumber"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="#989898"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forward" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Logoutbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_address"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonbg"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
</ScrollView>